--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'me.nentify.gprent'
-version = '1.0.0'
+version = '1.10.2-1.1.0-SNAPSHOT'
 description = 'Rent GriefPrevention claims'
 
 repositories {
